2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* {unix,win32}/fs.cc: Misc. compile fixes.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (UNIX_PLATFORM_SOURCES): Add unix/fs.cc
	(WIN32_PLATFORM_SOURCES): Add win32/fs.cc
	* paths.hh (bookkeeping_path): Implement default constructor.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* rcs_import.cc (import_cvs_repo): 
	* lua.cc (default_rcfilename): 
	* diff_patch.cc (get_version): Small compile fixes.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh} (is_bookkeeping_path): New static method.
	* file_io.cc (walk_tree_recursive): Use it.  Now compiles.
	paths.cc and file_io.cc now compile.
	
2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (delete_dir_recursive): Implement.
	Misc. compile fixes.
	
2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (test_book_keeping_file): Remove.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (walk_tree_recursive, walk_tree): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (const_system_path): Do tilde expansion.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (read_localized_data, read_data_for_command_line) 
	(write_localized_data, write_data, write_data_impl): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (read_data): Implement.  Remove the base64<gzip<>>
	versions.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (move_file, move_dir): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (assert_path_is_nonexistent, assert_path_is_file) 
	(assert_path_is_directory, require_path_is_nonexistent) 
	(require_path_is_file, require_path_is_directory) 
	(ident_existing_file, mkdir_p, make_dir_for, delete_file) 
	(delete_dir_recursive): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* Audit uses of 'file_exists', because its semantics have changed;
	it now checks to see if a path exists and is a regular file,