@@ -31,7 +31,6 @@ void add_revision_tests(test_suite * suite);
 void add_xdelta_tests(test_suite * suite);
 void add_packet_tests(test_suite * suite);
 void add_netcmd_tests(test_suite * suite);
-void add_path_component_tests(test_suite * suite);
 void add_globish_tests(test_suite * suite);
 void add_crypto_tests(test_suite * suite);
 void add_string_queue_tests(test_suite * suite);
